[gd_scene load_steps=38 format=2]

[ext_resource path="res://Ship0.png" type="Texture" id=1]
[ext_resource path="res://EngineParticle.png" type="Texture" id=2]
[ext_resource path="res://Explosion/Explosion0.png" type="Texture" id=3]
[ext_resource path="res://Explosion/Explosion1.png" type="Texture" id=4]
[ext_resource path="res://topborder.tres" type="Shape2D" id=5]
[ext_resource path="res://Background.tscn" type="PackedScene" id=6]
[ext_resource path="res://KinematicBody2D.gd" type="Script" id=7]
[ext_resource path="res://std#16 (17).wav" type="AudioStream" id=8]
[ext_resource path="res://Projectiles.gd" type="Script" id=9]
[ext_resource path="res://Bullet.gd" type="Script" id=10]
[ext_resource path="res://BulletHitbox.tres" type="Shape2D" id=11]
[ext_resource path="res://Star.png" type="Texture" id=12]
[ext_resource path="res://Camera2D.tscn" type="PackedScene" id=13]
[ext_resource path="res://Pixelhour-R65A.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://Light.png" type="Texture" id=15]
[ext_resource path="res://Font.tres" type="DynamicFont" id=16]
[ext_resource path="res://Balls.gd" type="Script" id=17]
[ext_resource path="res://Backboard.png" type="Texture" id=18]
[ext_resource path="res://Score.gd" type="Script" id=19]
[ext_resource path="res://Enemies.gd" type="Script" id=20]
[ext_resource path="res://Game.gd" type="Script" id=21]
[ext_resource path="res://Explosion/Explosion4.png" type="Texture" id=22]
[ext_resource path="res://Explosion/Explosion2.png" type="Texture" id=23]
[ext_resource path="res://Explosion/Explosion3.png" type="Texture" id=24]
[ext_resource path="res://Lives.gd" type="Script" id=25]
[ext_resource path="res://1-02 Magnolia Eclair.wav" type="AudioStream" id=26]
[ext_resource path="res://std#14 (14_e).wav" type="AudioStream" id=27]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 77.2885, 112.178 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 22 ) ],
"loop": true,
"name": "Explosion",
"speed": 5.0
} ]

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0.0114943, 0.854545 ), 0.0, 0.247159, 0, 0, Vector2( 0.942529, 0.518182 ), -2.28485, -2.28485, 0, 0, Vector2( 1, 0 ), -5.22, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.0171429, 0.457143, 0.994286 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 400 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 10, 400 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 300, 10 )

[sub_resource type="Gradient" id=10]
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=9]
size = 25
outline_size = 1
outline_color = Color( 0, 0.647059, 1, 1 )
font_data = ExtResource( 14 )

[node name="Game" type="Node2D"]
script = ExtResource( 21 )

[node name="Enemies" type="Node" parent="."]
script = ExtResource( 20 )

[node name="Camera2D" parent="." instance=ExtResource( 13 )]

[node name="Player" type="KinematicBody2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource( 7 )

[node name="PlayerCollisionBox" type="CollisionShape2D" parent="Player"]
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )
one_way_collision = true

[node name="PlayerHitbox" type="Area2D" parent="Player"]

[node name="PlayerCollisionBox" type="CollisionShape2D" parent="Player/PlayerHitbox"]
scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )

[node name="PlayerShip" type="AnimatedSprite" parent="Player"]
scale = Vector2( 0.3, 0.3 )
frames = SubResource( 2 )
playing = true

[node name="EngineParticles" type="CPUParticles2D" parent="Player/PlayerShip"]
position = Vector2( 0, 126.05 )
z_index = 1
amount = 25
lifetime = 1.5
speed_scale = 3.0
lifetime_randomness = 0.5
texture = ExtResource( 2 )
emission_shape = 4
emission_points = PoolVector2Array( 15, 10, 0, 20, -15, 10 )
emission_normals = PoolVector2Array( 30, 70, 0, 80, -30, 70 )
emission_colors = PoolColorArray(  )
direction = Vector2( 0, 0 )
gravity = Vector2( 0, 0 )
initial_velocity = 1000.0
scale_amount = 0.2
scale_amount_random = 0.25
scale_amount_curve = SubResource( 3 )
color_ramp = SubResource( 4 )

[node name="Projectiles" type="Node" parent="Player"]
script = ExtResource( 9 )

[node name="Bullet" type="KinematicBody2D" parent="Player/Projectiles"]
scale = Vector2( 0.3, 0.3 )
collision_layer = 5
collision_mask = 5
script = ExtResource( 10 )

[node name="BulletSoundPlayer" type="AudioStreamPlayer" parent="Player/Projectiles/Bullet"]
stream = ExtResource( 27 )

[node name="BulletSprite" type="AnimatedSprite" parent="Player/Projectiles/Bullet"]
frames = SubResource( 5 )

[node name="Light2D" type="Light2D" parent="Player/Projectiles/Bullet/BulletSprite"]
texture = ExtResource( 15 )
energy = 2.0
range_height = 200.0
range_layer_min = -3
range_layer_max = 1

[node name="BulletCollisionBox" type="CollisionShape2D" parent="Player/Projectiles/Bullet"]
shape = ExtResource( 11 )

[node name="BulletHitbox" type="Area2D" parent="Player/Projectiles/Bullet"]
collision_layer = 5
collision_mask = 5

[node name="HitboxShape" type="CollisionShape2D" parent="Player/Projectiles/Bullet/BulletHitbox"]
shape = ExtResource( 11 )

[node name="ExplosionSoundPlayer" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 8 )

[node name="PlayerBorders" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="Top" type="CollisionShape2D" parent="PlayerBorders"]
position = Vector2( 0, -30 )
shape = ExtResource( 5 )

[node name="Bottom" type="CollisionShape2D" parent="PlayerBorders"]
position = Vector2( 0, 210 )
shape = ExtResource( 5 )

[node name="Borders" type="StaticBody2D" parent="."]
position = Vector2( 0, -200 )
collision_layer = 7
collision_mask = 7

[node name="Left" type="CollisionShape2D" parent="Borders"]
position = Vector2( -310, 0 )
shape = SubResource( 6 )

[node name="Right" type="CollisionShape2D" parent="Borders"]
position = Vector2( 310, 0 )
shape = SubResource( 7 )

[node name="Top" type="CollisionShape2D" parent="Borders"]
position = Vector2( 0, -410 )
shape = SubResource( 8 )

[node name="StarGenerator" type="CPUParticles2D" parent="Borders/Top"]
modulate = Color( 1, 0.901961, 0.901961, 1 )
position = Vector2( 0, -50 )
z_index = -2
amount = 150
lifetime = 5.0
preprocess = 10.0
texture = ExtResource( 12 )
emission_shape = 4
emission_points = PoolVector2Array( -275, 0, -250, 0, -225, 0, -200, 0, -175, 0, -150, 0, -125, 0, -100, 0, -75, 0, -50, 0, -25, 0, 25, 0, 50, 0, 75, 0, 100, 0, 125, 0, 150, 0, 175, 0, 200, 0, 225, 0, 250, 0, 275, 0, 300, 0 )
emission_normals = PoolVector2Array(  )
emission_colors = PoolColorArray(  )
direction = Vector2( 0, 1 )
spread = 0.0
gravity = Vector2( 0, 0 )
initial_velocity = 250.0
initial_velocity_random = 1.0
color_ramp = SubResource( 10 )
hue_variation = 0.01
hue_variation_random = 1.0

[node name="Lives" type="Label" parent="."]
margin_left = -75.0
margin_top = -583.881
margin_right = 75.0
margin_bottom = -550.881
rect_min_size = Vector2( 150, 33 )
mouse_default_cursor_shape = 5
custom_fonts/font = ExtResource( 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "LIVES"
align = 1
script = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LifeCounter" type="Control" parent="Lives"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life1" type="TextureRect" parent="Lives/LifeCounter"]
margin_left = 33.0361
margin_top = 22.0591
margin_right = 282.036
margin_bottom = 343.059
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="Life2" type="TextureRect" parent="Lives/LifeCounter"]
margin_left = 62.144
margin_top = 21.9473
margin_right = 311.144
margin_bottom = 342.947
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="Life3" type="TextureRect" parent="Lives/LifeCounter"]
margin_left = 91.092
margin_top = 21.8228
margin_right = 340.092
margin_bottom = 342.823
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="Balls" type="Label" parent="."]
margin_left = 135.421
margin_top = -583.881
margin_right = 285.421
margin_bottom = -550.881
rect_min_size = Vector2( 150, 33 )
mouse_default_cursor_shape = 5
custom_fonts/font = ExtResource( 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BALLS"
align = 1
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BallCounter" type="Control" parent="Balls"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ball1" type="TextureRect" parent="Balls/BallCounter"]
margin_left = 20.6188
margin_top = 20.3447
margin_right = 220.619
margin_bottom = 220.345
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ball2" type="TextureRect" parent="Balls/BallCounter"]
margin_left = 58.0526
margin_top = 22.3145
margin_right = 258.053
margin_bottom = 222.314
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ball3" type="TextureRect" parent="Balls/BallCounter"]
margin_left = 98.3989
margin_top = 22.814
margin_right = 298.399
margin_bottom = 222.814
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="Score" type="Label" parent="."]
margin_left = -285.421
margin_top = -583.881
margin_right = -135.421
margin_bottom = -550.881
rect_min_size = Vector2( 150, 33 )
mouse_default_cursor_shape = 5
custom_fonts/font = ExtResource( 16 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SCORE"
align = 1
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreNumber" type="Label" parent="Score"]
margin_left = 15.8922
margin_top = 20.2454
margin_right = 130.892
margin_bottom = 53.2454
custom_fonts/font = SubResource( 9 )
text = "100000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" parent="." instance=ExtResource( 6 )]

[node name="TopBar" type="Sprite" parent="."]
modulate = Color( 0.239216, 1, 0.74902, 1 )
position = Vector2( -0.00473529, -563.452 )
scale = Vector2( 0.299, 0.075 )
z_index = -2
texture = ExtResource( 18 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )
autoplay = true
[connection signal="spawnEnemy" from="." to="Enemies" method="_on_Game_spawnEnemy"]
[connection signal="destroyed" from="Player" to="Lives" method="_on_Player_destroyed"]
[connection signal="shoot" from="Player" to="Player/Projectiles" method="_on_Player_shoot"]
[connection signal="area_shape_entered" from="Player/PlayerHitbox" to="Player" method="_on_PlayerHitbox_area_shape_entered"]
[connection signal="fireProjectile" from="Player/Projectiles" to="Player/Projectiles/Bullet" method="_on_Projectiles_fireProjectile"]
[connection signal="bulletLost" from="Player/Projectiles/Bullet" to="Balls" method="_on_Bullet_bulletLost"]
[connection signal="area_shape_entered" from="Player/Projectiles/Bullet/BulletHitbox" to="Score" method="_on_BulletHitbox_area_shape_entered"]
[connection signal="area_shape_entered" from="Player/Projectiles/Bullet/BulletHitbox" to="Player" method="_on_Area2D_area_shape_entered"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
